update project to horizontal scroll but still got issue

--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,15 @@
   transform: translateZ(0);
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 @keyframes mulShdSpin {
   0%,
   100% {
